<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="?attr/color_bg_chart_info"
    android:layout_marginRight="4dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp"
            tools:text="6430.28" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp"
            tools:text="201511111" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_open"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_open_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/open_price"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_open_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_high"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_high_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/high_price"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_high_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_low"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_low_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/low_price"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_low_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_close"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_close_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/close_price"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_close_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_volume_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/volume"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_vol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/hold_total"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_change_rate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/change_rate"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_change_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_index"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/spot_index"
            android:textColor="?attr/color_text_chart_key"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_spot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/color_text_chart_value"
            android:textSize="9sp" />
    </LinearLayout>
</LinearLayout>